Fixed formatting in VimeoVideo segment and removed overflow css rule.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -403,7 +403,6 @@ blockquote
   padding-bottom: 56.25%; /* 16:9 */
   padding-top: 0px;
   height: 0;
-  overflow: hidden;
 }
 .vimeo-video iframe {
   position: absolute;
